# pqc-visualizer

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/tests/: test_api.py
frontend/: index.html
frontend/content/bike/: decaps.md  encaps.md  keygen.md  setup.md
frontend/content/hqc/: decaps.md  encaps.md  keygen.md  setup.md
frontend/content/mceliece/: decaps.md  encaps.md  keygen.md  setup.md
frontend/css/: components.css  main.css  typography.css
frontend/js/: api.js  data.js  main.js  ui.js
